--- a/site/css/misc.css
+++ b/site/css/misc.css
@@ -18,8 +18,7 @@
     .post-category {
       font-size: 12px;
       border-radius: 100px;
-      padding: 0px 5px 2px;
-      vertical-align: top; }
+      padding: 0px 5px 2px; }
     
     .post-category.blue {
       background-color: #E0F3FE;
