--- a/css/misc.css
+++ b/css/misc.css
@@ -7,6 +7,10 @@
   margin-bottom: 30px;
 }
 
+.markdown-body {
+  height: 100vh;
+}
+
 .post-category {
   font-size: 12px;
   border-radius: 100px;
@@ -35,6 +39,13 @@
 
 .post-category.green {
   background-color: #cff4de;
+}
+
+.footer {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 5px;
 }
 
 @media only screen and (orientation: landscape) {
