--- a/css/misc.css
+++ b/css/misc.css
@@ -7,11 +7,37 @@
   margin-bottom: 30px;
 }
 
+
+.post-link {
+  display: block;
+}
+
+.post-meta {
+  color: #828282;
+}
+
 .markdown-body {
   min-height: 100vh;
 }
 
+.markdown-body p {
+  margin-bottom: 16px;
+}
+
+.toc-category-container {
+  padding: 15px;
+  margin: 30px 0 35px;
+  background-color: #f5fafd;
+  box-shadow: 2px 4px 10px 4px rgb(41 43 66 / 7%);
+  border-radius: 6px;
+}
+
+.toc-category > a {
+  color: #021CB8
+}
+
 .post-category {
+  display: inline-block;
   font-size: 12px;
   border-radius: 100px;
   padding: 0px 5px 2px;
@@ -46,45 +72,35 @@
   width: 100%;
   text-align: center;
   bottom: 5px;
+  font-size: 12px;
 }
+
+
+
 
 @media only screen and (orientation: landscape) {
   .post-link {
-    display: block;
     font-size: 24px;
   }
 
   .post-meta {
     font-size: 14px;
-    color: #828282;
   }
 
   .toc-category {
-    display: inline-block;
     width: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 6px;
-    padding-left: 6px;
+    padding: 10px 6px;
   }
 }
 
 @media only screen and (orientation: portrait) {
-  .post-link {
-    display: block;
-  }
   .post-meta {
     font-size: 24px;
-    color: #828282;
   }
 
   .toc-category {
-    display: inline-block;
     width: 200px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-right: 12px;
-    padding-left: 12px;
+    padding: 20px, 12px;
   }
 }
 
