--- a/site/css/misc.css
+++ b/site/css/misc.css
@@ -24,6 +24,10 @@
   margin-bottom: 16px;
 }
 
+.markdown-body figure {
+  margin: 0;
+}
+
 .toc-category-container {
   padding: 15px;
   margin: 30px 0 35px;
