--- a/site/css/misc.css
+++ b/site/css/misc.css
@@ -1,3 +1,37 @@
+a {
+  color: #4970FF
+}
+
+a:visited {
+  color: #4970FF
+}
+
+
+h2 {
+margin-top: 50px !important;
+  margin-bottom: 16px !important;
+}
+h3 {
+  margin-bottom: 20px !important;
+}
+
+h4 {
+  margin-top: 42px !important;
+  margin-bottom: 24px !important;
+  font-size: 1.1em !important;
+  font-weight: 500 !important;
+  
+}
+
+h5  {
+  font-size: 1em !important;
+  margin-bottom: 14px !important;
+}
+
+img {
+  margin-bottom: 10px !important;
+}
+
 .post-list {
   margin-left: 0;
   padding-left: 0;
